src/css/custom.css
/* ... */
.feature-cards .enterprise-app-store .feature-card-image {
  max-height: 212px;
  max-width: 75%;
}

.feature-cards .enterprise-app-store .feature-card-image img {
  height: 100%;
  width: auto;
  margin: 0 auto;
  display: block;
  object-fit: contain;
}

.feature-cards .self-hosted-runners {
  background: linear-gradient(180deg, #1142A2 0%, #091C84 100%);
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding-top: 32px;
  padding-bottom: 2rem;
}

.feature-cards .self-hosted-runners .feature-card-image {
  max-height: 231px;
  max-width: 75%;
}

.feature-cards .self-hosted-runners .feature-card-image img {
  height: 100%;
  width: auto;
  margin: 0 auto;
  display: block;
  object-fit: contain;
}

.feature-cards .self-hosted-runners .feature-card-info {
  color: #DEDEDE;
}


.feature-card-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 0 3rem;
  color: #DEDEDE;
  font-size: 15px;
  line-height: 21px;
}

.feature-card-info h4 {
  font-size: 24px;
  line-height: 28px;
  color: #FFFFFF;
  margin-top: 12px;
}

.new-badge {
  background: rgba(153, 176, 251, 0.5);
  letter-spacing: 0.1em;
  border-radius: 43px;
  color: #FFF;
  padding: 5px 10px;
  font-size: 10px;
  font-family: var(--ifm-font-family-base);
  font-weight: 700;
}

.selfhosted-badge {
  background: linear-gradient(180deg, #2B394F 0%, #0F1C32 100%);
  letter-spacing: 0.1em;
  border-radius: 43px;
  opacity: 0.3;
  color: #FFF;
  padding: 5px 10px;
  font-size: 10px;
  font-family: var(--ifm-font-family-base);
  font-weight: 700;
  white-space: pre;
}

.cloud-badge {
  background: linear-gradient(180deg, #1142A2 0%, #091C84 100%);
  letter-spacing: 0.1em;
  border-radius: 43px;
  opacity: 0.3;
  color: #FFF;
  padding: 5px 10px;
  font-size: 10px;
  font-family: var(--ifm-font-family-base);
  font-weight: 700;
}


.feature-card-learn-more {
  padding: 8px 20px;
  font-weight: 500;
  font-size: 16px;
  border-radius: 40px;
  margin-top: 8px;
}

.feature-card-learn-more.eas {
  background-color: #0176FF;
  color: #FFF;
}

.feature-card-learn-more.runner {
  background-color: #99B0FB;
  color: #060f3e;
}

@media (max-width: 550px) {
  .image-narrow {
    max-width: 100%;
  }
}

/* oembed */
iframe[src*='youtube.com'] {
  width: 600px !important;
  height: 338px !important;
  margin-bottom: 2rem;
}

@media (max-width: 550px) {
  iframe[src*='youtube.com'] {
    width: 300px !important;
    height: 170px !important;
  }
}

/* Link Card */
.rlc-container {
  width: 100%;
  max-width: 800px;
  max-height: 120px;
  margin: 0 auto 2rem 0;

  color: black;
  text-decoration: none;

  border-radius: 0.25rem;
  display: flex;
  align-items: stretch;

  transition: background 200ms ease-in-out 0s, box-shadow 200ms ease-in-out 0s;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  background-color: var(--ifm-card-background-color);
}

.rlc-container:hover {
  background-color: var(--ifm-card-background-color);
  box-shadow: 0 4px 5px 2px rgba(80, 80, 80, 0.2);
  color: inherit;
  text-decoration: none;
}

html[data-theme='dark'] .rlc-container:hover {
  background-color: var(--ifm-background-surface-color);
  box-shadow: 0 4px 5px 2px rgba(0, 0, 0, 0.15);
}

.rlc-info {
  overflow: hidden;
  padding: 1rem 0.5rem 1rem 1.25rem;
  flex: 4 1 100px;
  text-align: left;
  display: flex;
  flex-direction: column;
  font-size: 0.75rem;
}

.rlc-title {
  font-size: 1rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 4px;
  font-weight: 500;
}

.rlc-description {
  font-size: 0.875rem;
  color: #333;
  overflow: hidden;
  line-height: 1rem;
  height: 2rem;
}

.rlc-url-container {
  display: flex;
  align-items: center;
  margin-top: 8px;
}

.rlc-favicon {
  margin-right: 4px;
  width: 16px;
  height: 16px;
}

.rlc-url {
  font-size: 0.75rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: var(--ifm-link-color);
}

.rlc-url:hover {
  color: var(--ifm-link-hover-color);
}

.rlc-image-container {
  position: relative;
  flex: 1 1 54px;
  justify-content: center;
}

.rlc-image {
  object-fit: contain;
  width: 100%;
  height: 100% !important;
  max-height: 75%;
  margin-top: 7.5%;
  border-bottom-right-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.footer {
  background-color: #142d57;
}

.navbar__toggle {
  color: #ffffff;
}

.navbar-sidebar {
  background-color: var(--ifm-background-surface-color);
}

.navbar-sidebar__brand {
  background-color: var(--ifm-navbar-background-color);
}

html[data-theme='dark'] .rlc-container {
  color: white;
}

html[data-theme='dark'] .rlc-description {
  color: #aaa;
}

.intro-visual {
  padding: 4rem 114px 4.5rem 4rem;
  margin: 0;
  width: 100%;
  background-color: #EEF3FA;
  display: flex;
  justify-content: stretch;
  align-items: center;
}

.intro-text {
  margin-right: 48px;
}

.intro-text p {
  color: #1753AE !important;
  font-size: 24px;
  line-height: 30px;
  margin-top: 16px;
}

.intro-image {
  max-width: 50%;
}

.intro-image img {
  width: auto;
}

.intro-visual h5 {
  font-size: 64px;
  margin-bottom: 0.25rem;
  margin-top: 3rem;
  letter-spacing: -0.04em;
  font-family: greycliff-cf, sans-serif;
  line-height: 64px;
  font-weight: 800;
  color: #0F203A;
}
/* ... */

